--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,103 @@
 
 /* 3. Font size should be twice the normal size  */
 
+* {
+    font-family: Montserrat;
+}
 
+
+.main-area {
+    display: flex;
+    align-content: center;
+    flex-direction: column;
+}
+
+
+.grid {
+    margin: auto;
+    background-color: #FFCB05;
+    width: 60vw;
+    display: grid;
+    grid-template-rows: 14vh 14vh 14vh;
+    grid-template-columns: 20vw 20vw 20vw;
+}
+
+.grid .item1 {
+    grid-column: 1;
+    grid-row: 1;
+}
+
+.grid .item2 {
+    grid-column: 3;
+    grid-row: 1;
+}
+.grid .item3 {
+    grid-column: 2;
+    grid-row: 2;
+}
+
+.grid .item4 {
+    grid-column: 1;
+    grid-row: 3;
+}
+
+.grid .item5 {
+    grid-column: 3;
+    grid-row: 3;
+}
+
+.grid div {
+    background-color: #00274c;
+    color: #FFCB05;
+    margin: 0.5vh;
+    font-size: 4vh;
+    text-align: center;
+    padding: 10%;
+    border-radius: 7%;
+}
+.grid1 div {
+    background-color: #FFCB05;
+    margin: 0.5vh;
+    font-size: 4vh;
+    text-align: center;
+    padding: 10%;
+    border-radius: 7%;
+}
+
+
+.grid1 {
+    margin: auto;
+    background-color: #00274c;
+    height: 42vh;
+    width: 60vw;
+    display: grid;
+    grid-template-rows: 14vh 14vh 14vh;
+    grid-template-columns: 20vw 20vw 20vw;
+}
+
+.grid1 .item1 {
+    grid-column: 3;
+    grid-row: 3;
+}
+
+.grid1 .item2 {
+    grid-column: 3;
+    grid-row: 1;
+}
+.grid1 .item3 {
+    grid-column: 1;
+    grid-row: 2;
+}
+
+.grid1 .item4 {
+    grid-column: 2;
+    grid-row: 2;
+}
+
+.grid1 .item5 {
+    grid-column: 3;
+    grid-row: 2;
+}
 
 
 
